[project]
name = "structured-ollama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Elie Ferdman" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.2",
    "ipython>=8.30.0",
    "numpy>=2.2.0",
    "ollama>=0.4.4",
    "pydantic>=2.10.3",
    "tqdm>=4.67.1",
]

[project.scripts]
sllm = "structured_ollama:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
